tests/error/result_errors/result_array_after_move.py
from typing import no_type_check
from guppylang.decorator import guppy
from guppylang.std.builtins import array, result


@guppy
@no_type_check
def main() -> None:
   xs = array(1, 2, 3)
   ys = xs
   result("foo", xs)


guppy.compile(main)
