tests/error/result_errors/result_array_after_move.err
Error: Copy violation (at $FILE:11:17)
   | 
 9 |    xs = array(1, 2, 3)
10 |    ys = xs
11 |    result("foo", xs)
   |                  ^^ Variable `xs` with non-copyable type `array[int, 3]` cannot
   |                     be borrowed ...
   | 
10 |    ys = xs
   |         -- since it was already moved here

Help: Consider copying `xs` instead of moving it: `xs.copy()`

Guppy compilation failed due to 1 previous error
